# Calculus_RAG

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  NEXT_STEPS.md  README.md  README_STREAMLIT.md  SETUP_CLOUD.md  app.py  docker-compose.yml  pyproject.toml  run_app.sh
.claude/: settings.local.json
backups/: backup_2025-12-24_09-34-51.dump
knowledge_content/khan_academy/precalculus/: 2003_AIME_II_problem_8_AIME_Math_for_fun_and_glory.md  Basic_complex_analysis_Imaginary_and_complex_numbe.md  Benfords_law_explanation_sequel_to_mysteries_of_Be.md  Binomial_Theorem_part_1.md  Binomial_Theorem_part_2.md  Binomial_theorem_combinatorics_connection_Algebra_.md  Combinations.md  Complex_conjugates_Imaginary_and_complex_numbers_P.md  Complex_determinant_example_Imaginary_and_complex_.md  Compound_interest_and_e_part_2_Exponential_and_log.md  Compound_interest_and_e_part_3_Exponential_and_log.md  Compound_interest_and_e_part_4_Exponential_and_log.md  Exponential_Growth.md  Exponential_form_to_find_complex_roots_Imaginary_a.md  Function_inverse_example_1_Functions_and_their_gra.md  Function_inverses_example_2_Functions_and_their_gr.md  Function_inverses_example_3_Functions_and_their_gr.md  Interest_part_2_Interest_and_debt_Finance_Capital_.md  Introduction_to_compound_interest_and_e_Algebra_II.md  Introduction_to_function_inverses_Functions_and_th.md  Introduction_to_interest_Interest_and_debt_Finance.md  Introduction_to_limits_2_Limits_Precalculus_Khan_A.md  Introduction_to_limits_Limits_Differential_Calculu.md  Limit_examples_part_1_Limits_Differential_Calculus.md  Limit_examples_part_2_Limits_Differential_Calculus.md  Limit_examples_part_3_Limits_Differential_Calculus.md  Limit_examples_w_brain_malfunction_on_first_prob_p.md  Logarithmic_scale_Logarithms_Algebra_II_Khan_Acade.md  More_limits_Limits_Differential_Calculus_Khan_Acad.md  Parametric_equations_1_Parametric_equations_and_po.md  Parametric_equations_2_Parametric_equations_and_po.md  Parametric_equations_3_Parametric_equations_and_po.md  Parametric_equations_4_Parametric_equations_and_po.md  Permutations.md  Polar_coordinates_1_Parametric_equations_and_polar.md  Polar_coordinates_2_Parametric_equations_and_polar.md  Polar_coordinates_3_Parametric_equations_and_polar.md  Proof_lim_sin_xx_Limits_Differential_Calculus_Khan.md  Sequences_and_Series_part_1.md  Sequences_and_series_part_2.md  (+4 more)
scripts/: add_pdf.py  auto_ingest_monitor.sh  backup_db.py  check_ingestion.py  cleanup_corrupted_chunks.py  compare_models.py  demo_smart_routing.py  fetch_transcript.py  ingest_all_large_pdfs.sh  ingest_khan_academy.py  ingest_khan_academy_v2.py  ingest_khan_academy_v3.py  ingest_large_pdf.py  ingest_markdown.py  ingest_pdfs.py  ingest_youtube_playlist.py  interactive_rag.py  interactive_rag_with_cloud.py  migrate_to_1024.py  restore_db.py  retry_failed_transcripts.py  test_cloud_model.py  test_hybrid_search.py  test_local_routing.py  test_mxbai.py  test_pgvector_integration.py  test_rag_e2e.py  test_rag_quick.py  test_rag_with_knowledge.py
src/calculus_rag/: __init__.py  config.py
src/calculus_rag/embeddings/: __init__.py  base.py  bge_embedder.py  ollama_embedder.py
src/calculus_rag/knowledge_base/: __init__.py  chunker.py  loader.py  metadata.py  models.py
src/calculus_rag/llm/: __init__.py  (+4 more)
tests/: conftest.py
tests/unit/: test_config.py
(+31 files in other folders)
